--- a/_posts/2020-12-31-bilan-2020.md
+++ b/_posts/2020-12-31-bilan-2020.md
@@ -13,6 +13,13 @@ tags: bilan
 ![texte alternatif à l'image](/assets/post/2020-12-31-bilan-2020/thumbnail.jpg "Description de l info-bulle image"){:class="img_1_centered"}
 {: .pContainerOfImage}
 
+## Conclusion Générale
+L'année 2020 a été marquée par une prise de fonction dans un contexte de crise sanitaire omniprésent.
+
+Elle a été l'occasion d'apprendre le fonctionnement au quotidien du conseil municipal, des commissions ainsi que de trouver mes marques par rapport aux différents sujets qui rythment l'année et par rapport aux interactions avec la majorité et avec les groupes minoritaires dont Saint-Cloud 2020 et le Parti Socialiste.
+
+Durant la phase de découverte, ce qui est le plus marquant est que le traitement des délibérations demande une bonne organisation de travail car le volume d'information à digérer est important et le délais est de 4 jours entre le moment où je reçois le dossier contenant les délibérations (jeudi soir) et le jour de la commission des Finances (lundi soir suivant) où je dois me prononcer sur chaque délibération ; en amont du conseil municipal (jeudi soir suivant). L'ensemble se déroule sur 1 semaine.
+
 ## Mes Votes
 Légende :
 * Vert = POUR
@@ -28,6 +35,14 @@ CM = Conseil Municipal
 ### Vue d'ensemble
 ![texte alternatif à l'image](/assets/post/2020-12-31-bilan-2020/repartition_votes.jpg "Description de l info-bulle image"){:class="img_1_centered"}
 {: .pContainerOfImage}
+
+**TOTAL : 101 délibérations**
+* 76 : POUR
+* 2 &nbsp; : ABSTENTION
+* 4 &nbsp; : CONTRE
+* 18 : NE PREND PAS PART AU VOTE
+* 1 &nbsp; : DONNER ACTE
+
 
 ### Détails
 
@@ -121,12 +136,12 @@ CM = Conseil Municipal
   </div>
 
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingThree">
+    <h2 class="accordion-header" id="headingFour">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse04" aria-expanded="false" aria-controls="collapse04">
         CM du 2 juillet 2020 (12 POUR, 0 ABS, 0 CONTRE, 1 délibération supprimée)
       </button>
     </h2>
-    <div id="collapse04" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+    <div id="collapse04" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <ul class="list-group">
           <li class="list-group-item list-group-item-success">56/ Nomination d'un secrétaire de séance</li>
@@ -148,12 +163,12 @@ CM = Conseil Municipal
   </div>
 
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingThree">
+    <h2 class="accordion-header" id="headingFive">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse05" aria-expanded="false" aria-controls="collapse05">
         CM du 24 septembre 2020 (15 POUR, 0 ABS, 0 CONTRE)
       </button>
     </h2>
-    <div id="collapse05" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+    <div id="collapse05" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <ul class="list-group">
           <li class="list-group-item list-group-item-success">68/ Désignation d'un secrétaire de séance</li>
@@ -178,12 +193,12 @@ CM = Conseil Municipal
   </div>
   
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingThree">
+    <h2 class="accordion-header" id="headingSix">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse06" aria-expanded="false" aria-controls="collapse06">
         CM du 19 novembre 2020 (12 POUR, 0 ABS, 0 CONTRE, 1 DONNER ACTE)
       </button>
     </h2>
-    <div id="collapse06" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+    <div id="collapse06" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <ul class="list-group">
           <li class="list-group-item list-group-item-success">83/ Désignation d'un secrétaire de séance</li>
@@ -205,12 +220,12 @@ CM = Conseil Municipal
   </div>
   
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingThree">
+    <h2 class="accordion-header" id="headingSeven">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse07" aria-expanded="false" aria-controls="collapse07">
         CM du 17 décembre 2020 (15 POUR, 2 ABS, 1 CONTRE)
       </button>
     </h2>
-    <div id="collapse07" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+    <div id="collapse07" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <ul class="list-group">
           <li class="list-group-item list-group-item-success">96/ Désignation d'un secrétaire de séance</li>
