--- a/_posts/2021-12-31-bilan-2021.md
+++ b/_posts/2021-12-31-bilan-2021.md
@@ -10,4 +10,240 @@ tags: bilan
 ---
 # Bilan 2021
 
-A écrire
+![texte alternatif à l'image](/assets/post/2021-12-31-bilan-2021/thumbnail.jpg "Description de l info-bulle image"){:class="img_1_centered"}
+{: .pContainerOfImage}
+
+## Conclusion Générale
+L'année 2021 a été une nouvelle fois marquée par la crise sanitaire.
+
+## Mes Votes
+Légende :
+* Vert = POUR
+* Jaune = ABSTENTION
+* Rouge = CONTRE
+* Gris = NE PREND PAS PART AU VOTE. Note: cela peut signifier 2 choses :
+    * manifester une contestation de la légitimité du vote
+    * ou manifester le refus de se sentir légitime à se prononcer (par exemple pour une nomination qui ne concerne pas l'opposition municipale)
+* Bleu = DONNER ACTE (délibération sans vote)
+
+CM = Conseil Municipal
+
+### Vue d'ensemble
+![texte alternatif à l'image](/assets/post/2021-12-31-bilan-2021/repartition_votes.jpg "Description de l info-bulle image"){:class="img_1_centered"}
+{: .pContainerOfImage}
+
+**TOTAL : 101 délibérations**
+* 90 : POUR
+* 1 &nbsp; : ABSTENTION
+* 7 &nbsp; : CONTRE
+* 0 : NE PREND PAS PART AU VOTE
+* 3 &nbsp; : DONNER ACTE
+
+### Détails
+
+
+<div class="accordion" id="accordionExample">
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingOne">
+      <button class="accordion-button  collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse01" aria-expanded="true" aria-controls="collapse01">
+        CM du 28 janvier (5 POUR, 0 ABS, 0 CONTRE, 1 DONNER ACTE)
+      </button>
+    </h2>
+    <div id="collapse01" class="accordion-collapse collapse collapse" aria-labelledby="heading1" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <ul class="list-group">
+          <li class="list-group-item list-group-item-success">1/ Désignation d'un secrétaire de séance</li>
+          <li class="list-group-item list-group-item-success">2/ Adoption des modalités d'identification des participants, d'enregistrement et de conservation des débats ainsi que des modalités du scrutin, dans le cadre de la prorogation de l'état d'urgence sanitaire</li>
+          <li class="list-group-item list-group-item-info">3/ Rapport d'orientation budgétaire 2021</li>
+          <li class="list-group-item list-group-item-success">4/ Attribution d'une subvention d'équipement au Centre des monuments nationaux</li>
+          <li class="list-group-item list-group-item-success">5/ Convention avec l'association Espaces pour la création d'un chantier d'insertion pour l'entretien du cimetière communal et de certains espaces verts de la Ville</li>
+          <li class="list-group-item list-group-item-success">6/ Modification du tableau des effectifs au 1er février 2021</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse02" aria-expanded="false" aria-controls="collapse02">
+        CM du 11 mars (1 POUR, 0 ABS, 1 CONTRE)
+      </button>
+    </h2>
+    <div id="collapse02" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <ul class="list-group">
+          <li class="list-group-item list-group-item-success">7/ Désignation d'un secrétaire de séance</li>
+          <li class="list-group-item list-group-item-danger">8/ Remplacement d'un Conseiller de territoire au sein de l'Etablissement public territorial Paris Ouest La Défense suite à une vacance de poste</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse03" aria-expanded="false" aria-controls="collapse03">
+        CM du 25 mars (15 POUR, 0 ABS, 2 CONTRE)
+      </button>
+    </h2>
+    <div id="collapse03" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <ul class="list-group">
+          <li class="list-group-item list-group-item-success">9/ Désignation d'un secrétaire de séance</li>
+          <li class="list-group-item list-group-item-success">10/ Adoption des modalités d'identification des participants, d'enregistrement et de conservation des débats, ainsi que des modalités du scrutin, dans le cadre de la prorogation de l'état d'urgence sanitaire</li>
+          <li class="list-group-item list-group-item-danger">11/ Création d'une autorisation de programme et crédits de paiement pour les travaux de réhabilitation du marché des Avelines</li>
+          <li class="list-group-item list-group-item-danger">12/ Adoption du Budget Primitif 2021</li>
+          <li class="list-group-item list-group-item-success">13/ Attribution des subventions aux associations pour l'année 2021</li>
+          <li class="list-group-item list-group-item-success">14/ Subvention au Centre Communal d'Action Socilae 2021</li>
+          <li class="list-group-item list-group-item-success">15/ Subvention à la Caise des Ecoles pour l'année 2021</li>
+          <li class="list-group-item list-group-item-success">16/ Fixation des taux des Impôts locaux pour l'année 2021<br>
+          <i>Note: Taxe Foncière (bâti) : 20.34 % (=13.26% + 7.08% transfert du taux du département) ; Taxe Foncière (non bâti) : 14.22 %</i></li>
+          <li class="list-group-item list-group-item-success">17/ Plan de relance économique 2021 : soutien au commerce et à l'artisanat - Exonération de redevances d'occupation du domaine public</li>
+          <li class="list-group-item list-group-item-success">18/ Remboursement aux usagers des prestations annulées pendants la crise sanitaire - Année 2021</li>
+          <li class="list-group-item list-group-item-success">19/ Contrat de développement entre la Ville et le Conseil départemental des Hauts-de-Seine - Avenant n°1</li>
+          <li class="list-group-item list-group-item-success">20/ Avenant n°1 au protocole d'accord signé avec I3F relatif au projet immobilier situé 38-40 boulevard de la République</li>
+          <li class="list-group-item list-group-item-success">21/ Convention de transfert de maitrise d'ouvrage à I3F pour la réalisation de travaux de la rampe d'accès au parking - projet des Avelines</li>
+          <li class="list-group-item list-group-item-success">22/ Cession à l'Institut Curie de douze emplacements de stationnement en sous-sol sur le site des bureaux de la colline</li>
+          <li class="list-group-item list-group-item-success">23/ Garantie communale pour un emprunt d'un montant total de 602 227€ accordé à la société Seqens pour l'acquisition en VEFA de 8 logements de type PLAI/PLUS, 61 quai Marcel Dassault à Saint-Cloud</li>
+          <li class="list-group-item list-group-item-success">24/ Convention de mise à disposition constitutive de droits réels pour l'implantation d'un poste de distribution publique</li>
+          <li class="list-group-item list-group-item-success">25/ Modification du tableau des effectifs au 1er avril 2021 avec autorisation à recourir aux contractuels sur plusieurs emplois déjà inscrits au tableau des effectifs</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse04" aria-expanded="false" aria-controls="collapse04">
+        CM du 20 mai (16 POUR, 0 ABS, 0 CONTRE)
+      </button>
+    </h2>
+    <div id="collapse04" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <ul class="list-group">
+          <li class="list-group-item list-group-item-success">26/ Désignation d'un secrétaire de séance</li>
+          <li class="list-group-item list-group-item-success">27/ Adoption des modalités d'identification des participants, d'enregistrement et de conservation des débats, ainsi que des modalités du scrutin, dans le cadre de la prorogation de l'état d'urgence sanitaire.</li>
+          <li class="list-group-item list-group-item-success">28/ Avis sur le Compte de Gestion 2020 du comptable public</li>
+          <li class="list-group-item list-group-item-success">29/ Election du président de séance pour l'examen et le vote du compte administratif 2020</li>
+          <li class="list-group-item list-group-item-success">30/ Approbation du Compte Administratif 2020</li>
+          <li class="list-group-item list-group-item-success">31/ Affectation du résultat de fonctionnement 2020</li>
+          <li class="list-group-item list-group-item-success">32/ Bilan des acquisitions et cessions fonci_res 2020</li>
+          <li class="list-group-item list-group-item-success">33/ Taxe foncière sur les propriétés bâties : exonération de deux ans en faveur des constructions nouvelles à usage d'habitation</li>
+          <li class="list-group-item list-group-item-success">34/ Taxe communale sur la Consommation Finale d'Electricité : fixation du taux d'imposition à compter de 2022</li>
+          <li class="list-group-item list-group-item-success">35/ Annulation de titre sur l'exercice 2021</li>
+          <li class="list-group-item list-group-item-success">36/ Subvention exceptionnelle à l'association "Saint-Cloud Commerces"</li>
+          <li class="list-group-item list-group-item-success">37/ Modification des tarifs applicables au stationnement payant en voirie et dans le parking Joffre</li>
+          <li class="list-group-item list-group-item-success">38/ Modification n°8 à la délégation de service public pour l'exploitation du stationnement payant sur voirie et hors voirie du 24 février 2010 - Approbation de la convention de mandat</li>
+          <li class="list-group-item list-group-item-success">39/ Adhésion de la commune de Loges-en-Josas (78) au syndicat intercommunal pour le gaz et l'électricité en Ile-de-France (SIGEIF) au titre de compétences diverses</li>
+          <li class="list-group-item list-group-item-success">40/ Convention de création d'un service commun de Système d'Information Géographique territorial au sein de l'Etablissement Public Territorial Paris Ouest la Défense</li>
+          <li class="list-group-item list-group-item-success">41/ Modification du tableau des effectifs au 1er juin 2021</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse05" aria-expanded="false" aria-controls="collapse05">
+        CM du 8 juillet (11 POUR, 0 ABS, 3 CONTRE)
+      </button>
+    </h2>
+    <div id="collapse05" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <ul class="list-group">
+          <li class="list-group-item list-group-item-success">42/ Désignation d'un secrétaire de séance</li>
+          <li class="list-group-item list-group-item-success">43/ Modification n°3 à la concession de service public relative à la construction et la gestion du parc de stationnement Joffre</li>
+          <li class="list-group-item list-group-item-danger">44/ Cession du parking Joffre à la Société du Grand Paris<br><i>Note : bien qu'étant personnellement favorable j'ai voté conformément à la position des autres membres de mon groupe</i></li>
+          <li class="list-group-item list-group-item-danger">45/ Convention relative à la réalisation du diagnostic d'archéologie préventive dans le jardin des Gâtines par l'INRAP<br><i>Note : bien qu'étant personnellement favorable j'ai voté conformément à la position des autres membres de mon groupe</i></li>
+          <li class="list-group-item list-group-item-success">46/ Convention relative aux modalités de réalisation et au financement de l'étude du pôle d'échanges de Saint-Cloud</li>
+          <li class="list-group-item list-group-item-success">47/ Acquisition amiable de l'ancien bureau de poste sis 12 place Silly à Saint-Cloud</li>
+          <li class="list-group-item list-group-item-success">48/ Convention de groupement de commandes pour les futurs marchés communs du Territoire</li>
+          <li class="list-group-item list-group-item-success">49/ Approbation d'un protocole transactionnel relatif à un contentieux avec la société Sarmates ayant pour objet l'annulation d'un titre de pénalité</li>
+          <li class="list-group-item list-group-item-danger">50/ Décision sur le principe du recours à la délégation de service public relative à la gestion de la restauration collective pour les usagers scolaires, périscolaires et le personnel communal</li>
+          <li class="list-group-item list-group-item-success">51/ Adhésion de la Ville de Saint-Cloud au dispositif pass culture</li>
+          <li class="list-group-item list-group-item-success">52/ Taxe commununale sur la consommation finale d'électricité - Retrait</li>
+          <li class="list-group-item list-group-item-success">53/ Aménagement du temps de travail des agents municipaux de la Ville de Saint-Cloud</li>
+          <li class="list-group-item list-group-item-success">54/ Nouveau régime indemnitaire tenant compte des fonctions, des sujétions, de l'experience et de l'engagement professionnel (RIFSEEP) - Modificatif n°4 relatif aux cadres d'emplois des psychologues et des agents sociaux territoriaux</li>
+          <li class="list-group-item list-group-item-success">55/ Modification du tableau des effectifs au 1er août 2021</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse06" aria-expanded="false" aria-controls="collapse06">
+        CM du 23 septembre (7 POUR, 0 ABS, 1 CONTRE, 2 DONNER ACTE)
+      </button>
+    </h2>
+    <div id="collapse06" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <ul class="list-group">
+          <li class="list-group-item list-group-item-success">56/ Désignation d'un secrétaire de séance</li>
+          <li class="list-group-item list-group-item-success">57/ Approbation du Budget Supplémentaire pour l'année 2021</li>
+          <li class="list-group-item list-group-item-success">58/ Contrat de développement entre la Ville et le Conseil Départemental des Hauts-de-Seine - Avenant n°2</li>
+          <li class="list-group-item list-group-item-success">59/ Subvention pour surcharge foncière d'un montant de 100 000€ accordée à Hauts-de-Seine Habitat-OPH pour l'acquisition en VEFA de 34 logements de type PLAI/PLUS, 19 rue Laval à Saint-Cloud</li>
+          <li class="list-group-item list-group-item-success">60/ Convention de détermination de la contribution communale aux dépenses de fonctionnement de l'école Saint-Joseph</li>
+          <li class="list-group-item list-group-item-danger">61/ Participation de la Ville aux dépenses de fonctionnement de l'école Saint-Pie X</li>
+          <li class="list-group-item list-group-item-info">62/ Rapport annuel 2020 relatif à la délégation de service public de la restauration scolaire</li>
+          <li class="list-group-item list-group-item-info">63/ Rapport annuel 2020 relatif à la délégation de service public pour la gestion et l'exploitation de la crèche la Petit Sirène</li>
+          <li class="list-group-item list-group-item-success">64/ Constitution d'une servitude de passage de canalisation de gaz</li>
+          <li class="list-group-item list-group-item-success">65/ Participation de la médiathèque municipale au prix littéraire Mangawa</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse07" aria-expanded="false" aria-controls="collapse07">
+        CM du 16 décembre (35 POUR, 1 ABS, 0 CONTRE)
+      </button>
+    </h2>
+    <div id="collapse07" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <ul class="list-group">
+          <li class="list-group-item list-group-item-success">66/ Désignation d'un secrétaire de séance</li>
+          <li class="list-group-item list-group-item-success">67/ Installation de Madame Irène DOUTSAS, nouvelle élue remplaçante de Catherine NADO</li>
+          <li class="list-group-item list-group-item-success">68/ Commission des Travaux : remplacement d'un membre</li>
+          <li class="list-group-item list-group-item-success">69/ Remplacement d'un membre au sein du Conseil d'Administration du Centre Communal d'Action Sociale</li>
+          <li class="list-group-item list-group-item-success">70/ Révision de l'autorisation de programme et crédits de paiement relative aux travaux de réhabtilitation du marché des Avelines</li>
+          <li class="list-group-item list-group-item-success">71/ Décision modificative n°1 au budget primitif 2021</li>
+          <li class="list-group-item list-group-item-success">72/ Admissions en non-valeur des créances irrécouvrables sur le budget principal 2021</li>
+          <li class="list-group-item list-group-item-success">73/ Ouverture des crédits d'investissement avant le vote du budget primitif 2022</li>
+          <li class="list-group-item list-group-item-success">74/ Versement d'acomptes sur les subventions aux associations avant le vote du budget primitif 2022</li>
+          <li class="list-group-item list-group-item-success">75/ Subvention exceptionnelle à l'association "Saint-Cloud Sourires"</li>
+          <li class="list-group-item list-group-item-success">76/ Détermination des lots pour la tombola des commerçants</li>
+          <li class="list-group-item list-group-item-success">77/ Délégation d'attributions au maire - modification</li>
+          <li class="list-group-item list-group-item-success">78/ Décision sur le principe du recours à la délégation de service public pour la gestion de la crèche la Petite Sirène</li>
+          <li class="list-group-item list-group-item-success">79/ Convention territoriale globale entre la Ville de Saint-Cloud et la Caisse d'Allocations Familiales</li>
+          <li class="list-group-item list-group-item-warning">80/ Actualisation du montant et des modalités d'attribution de la prime 3ème enfant à compter du 1er janvier 2022</li>
+          <li class="list-group-item list-group-item-success">81/ Convention avec le conservatoire de musique et de danse pour le financement de l'enseignement musical dans les établissements scolaires publics du premier degré</li>
+          <li class="list-group-item list-group-item-success">82/ Garantie communale pour un emprunt d'un montant total de 1 344 202 € accordée à la société CDC-Habitat pour l'opération d'acquisition-amélioration de 6 logements PLAI/PLUS/PLS et 2 commerces, 11/13 rue de l'Eglise à Saint-Cloud</li>
+          <li class="list-group-item list-group-item-success">83/ Subvention pour surchage foncière d'un montant de 80 000 € accordée à la société CDC-Habitat pour l'opération d'acquisition-amélioration de 6 logements PLAI/PLUS/PLS et 2 commerces, 11/13 rue de l'Eglise à Saint-Cloud</li>
+          <li class="list-group-item list-group-item-success">84/ Subvention pour surcharge foncière d'un montant de 40 000 € accordé à la société Seqens pour l'acquisition en VEFA de 8 logements de type PLAI/PLUS, 61 quai Marcel Dassault à Saint-Cloud</li>
+          <li class="list-group-item list-group-item-success">85/ Rapports annuels 2019 et 2020 relatifs aux délégations de service public du stationnement payant</li>
+          <li class="list-group-item list-group-item-success">86/ Avenant n°1 ç la convention de transfert de maîtrise d'ouvrage à I3F pour la réalisation des travaux de la rampe d'accès au parking - Projet des Avelines</li>
+          <li class="list-group-item list-group-item-success">87/ Dérogation municipale au principe du repos dominical pour les salariés</li>
+          <li class="list-group-item list-group-item-success">88/ Subvention au profit de la Ligue contre le cancer</li>
+          <li class="list-group-item list-group-item-success">89/ Adhésion à l'association française des correspondants à la protection des données à caractère personnel (AFCDP)</li>
+          <li class="list-group-item list-group-item-success">90/ Recensement de la population : rémunération des agents recenseurs</li>
+          <li class="list-group-item list-group-item-success">91/ Adoption du Rapport sur la situation en matière d'égalité entre les femmes et les hommes</li>
+          <li class="list-group-item list-group-item-success">92/ Adoption du Rapport social unique</li>
+          <li class="list-group-item list-group-item-success">93/ Mise en palce du télétravail au sein de la Ville de Saint-Cloud - Modalités d'organisation</li>
+          <li class="list-group-item list-group-item-success">94/ Modification du règlement relatif aux modalités d'attribution des heures supplémentaires</li>
+          <li class="list-group-item list-group-item-success">95/ Adoption du règlement modifié des astreintes</li>
+          <li class="list-group-item list-group-item-success">96/ Conventions portant mise en oeuvre d'une période de préparation au reclassement (PPR)</li>
+          <li class="list-group-item list-group-item-success">97/ Recrutement de vacataires pour assurer la mission d'encradrement du temps de restauration scolaire et détermination du taux de rémunération</li>
+          <li class="list-group-item list-group-item-success">98/ Recrutement de vacataires au sein des établissements accueillant des enfants et détermination du taux de rémunération</li>
+          <li class="list-group-item list-group-item-success">99/ Adhésion au contrat groupe d'assurance des risques statutaires du Centre Intercommunal de gestion de la Petite couronne</li>
+          <li class="list-group-item list-group-item-success">100/ Modification du tableau des effectifs au 1er janvier 2022</li>
+          <li class="list-group-item list-group-item-success">101/ Nouveau régime indemnitaire tenant compte des fonctions, des sujétions, de l'expérience et de l'engagement professionnel (RIFSEEP) - Modificatif n°5 relatif aux cadres d'emplois des masseurs-kinésithérapeutes, psychomotriciens et orthophonistes territoriaux</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+
